--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ color:black;
    }
    }
 
-   @media only screen and (max-width: 600px) {
+   @media only screen and (min-width: 300px) {
       .btn-donate{
          font-size: 15px;
          padding-left: 20px;
